add route for restore password
